# gradetrail

./: .gitignore  CLAUDE.md  LICENSE  NOTES.md  README.md  pyproject.toml
docs/blog/: sqlite-wal-race-under-ray.md
docs/design/: eval-spec.md  viewer.md
evalflow/: spec.py
evalflow/providers/: anthropic.py  base.py  openai.py  openai_compatible.py
evalflow/runner/: local.py  ray_runner.py
evalflow/scorers/: base.py  deterministic.py  judge.py
examples/: gsm8k_500.yaml  gsm8k_50_anthropic.yaml  gsm8k_50_local.yaml  gsm8k_50_openai.yaml  judge_qa.yaml  sentiment.yaml  triviaqa_100_exact.yaml  triviaqa_100_judge.yaml
examples/data/: gsm8k_500.jsonl  qa_openended.jsonl  sentiment_50.jsonl  triviaqa_100.jsonl
gradetrail/: __init__.py  cli.py  manifest.py  results.py  spec.py
gradetrail/providers/: openai.py
gradetrail/runner/: local.py  ray_runner.py
gradetrail/scorers/: base.py  judge.py
gradetrail/viewer/: __init__.py  server.py
gradetrail/viewer/static/: index.html
judges/: qa_alias_correctness_v1.yaml  qa_correctness_v1.yaml
reproeval/: __init__.py  cache.py  cli.py  errors.py  manifest.py  results.py  spec.py
reproeval/providers/: anthropic.py  base.py  openai.py  openai_compatible.py
reproeval/runner/: base.py  local.py  ray_runner.py
reproeval/scorers/: deterministic.py  judge.py
scripts/: build_gsm8k_500.py  build_triviaqa_100.py  repro_sqlite_wal_race.py
tests/: test_cache.py  test_cli.py  test_manifest.py  test_results.py  test_spec.py
tests/providers/: test_anthropic.py  test_base.py  test_openai.py  test_openai_compatible.py
tests/runner/: test_base.py  test_local.py  test_ray_runner.py  test_ray_runner_sharding.py
tests/scorers/: test_deterministic.py  test_judge.py
tests/viewer/: test_cli_view.py  test_server.py
