[project]
name = "gradetrail"
version = "0.2.0"
description = "A distributed LLM evaluation harness: declarative, cached, reproducible."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Chitvan Patel" },
]
keywords = [
    "llm",
    "evaluation",
    "benchmarking",
    "testing",
    "anthropic",
    "openai",
    "ray",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "aiosqlite>=0.19",
    "structlog>=24.1",
    "anthropic>=0.40",
    "openai>=1.50",
    "typer>=0.12",
]

[project.urls]
Repository = "https://github.com/Cpatel2000/gradetrail"
Issues = "https://github.com/Cpatel2000/gradetrail/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff~=0.15.20",
    "build>=1.2",
    "twine>=5.0",
]
ray = [
    "ray>=2.9",
]

[project.scripts]
gradetrail = "gradetrail.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["gradetrail"]

[tool.ruff.lint.flake8-bugbear]
# typer's API is built around calling Argument()/Option() as argument defaults.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["ray: tests that require a real Ray cluster (ray.init); run with -m \"not ray\" to skip"]

[tool.hatch.build.targets.wheel]
packages = ["gradetrail"]
